publish: Fix table spacing.
generated from commit cea555227814c5b11a500f6f2e8d1275396716c8

--- a/bundle.css
+++ b/bundle.css
@@ -31,4 +31,8 @@ canvas {
   display: flex;
 }
 
+#simulation-table table {
+  border-spacing: 10px 2px;
+}
+
 /*# sourceMappingURL=bundle.css.map*/
